// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`will render pause when refreshing 1`] = `
<Memo(ForwardRef(PauseIcon))
  style={
    Object {
      "color": "#d32f2f",
      "fontSize": "2.5rem",
    }
  }
/>
`;

exports[`will render play when not refreshing 1`] = `
<Memo(ForwardRef(PlayCircleFilledWhiteIcon))
  style={
    Object {
      "color": "#0288d1",
      "fontSize": "2.5rem",
    }
  }
/>
`;

exports[`will render the bottom control 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": 80,
      "justifyContent": "space-around",
      "marginTop": 5,
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "width": "30%",
      }
    }
  >
    <ForwardRef(Slider)
      aria-label="Cellsize"
      defaultValue={15}
      marks={
        Array [
          Object {
            "label": "5",
            "value": 5,
          },
          Object {
            "label": "10",
            "value": 10,
          },
          Object {
            "label": "15",
            "value": 15,
          },
          Object {
            "label": "20",
            "value": 20,
          },
          Object {
            "label": "25px",
            "value": 25,
          },
        ]
      }
      max={25}
      min={5}
      onChange={[MockFunction]}
      step={5}
      value={20}
      valueLabelDisplay="off"
    />
  </div>
  <div
    style={
      Object {
        "width": "30%",
      }
    }
  >
    <ForwardRef(Slider)
      aria-label="Refreshrate"
      color="secondary"
      defaultValue={140}
      marks={
        Array [
          Object {
            "label": "20",
            "value": 20,
          },
          Object {
            "label": "140",
            "value": 140,
          },
          Object {
            "label": "260",
            "value": 260,
          },
          Object {
            "label": "380",
            "value": 380,
          },
          Object {
            "label": "500ms",
            "value": 500,
          },
        ]
      }
      max={500}
      min={20}
      onChange={[MockFunction]}
      step={120}
      value={140}
      valueLabelDisplay="off"
    />
  </div>
  <Links />
</div>
`;

exports[`will render the top control 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "#e5e5e359",
      "display": "flex",
      "flexDirection": "row",
      "height": 80,
      "justifyContent": "space-evenly",
      "width": "100%",
    }
  }
>
  <div>
    <ForwardRef(IconButton)
      aria-label="play_pause"
      onClick={[MockFunction]}
    >
      <Action
        isRefreshing={true}
      />
    </ForwardRef(IconButton)>
    <ForwardRef(IconButton)
      aria-label="reset"
      disabled={true}
      onClick={[MockFunction]}
    >
      <Memo(ForwardRef(RestartAltIcon))
        style={
          Object {
            "fontSize": "2.5rem",
          }
        }
      />
    </ForwardRef(IconButton)>
    <ForwardRef(IconButton)
      aria-label="clear"
      disabled={true}
      onClick={[MockFunction]}
    >
      <Memo(ForwardRef(HighlightOffOutlinedIcon))
        style={
          Object {
            "fontSize": "2.5rem",
          }
        }
      />
    </ForwardRef(IconButton)>
    <ForwardRef(Checkbox)
      checkedIcon={<Memo />}
      icon={<Memo />}
    />
  </div>
  <ForwardRef(Chip)
    color="error"
    label={6}
    style={
      Object {
        "justifyContent": "space-between",
        "width": 100,
      }
    }
    variant="outlined"
  />
</div>
`;
